fix(bookmarklet): make "install" button more visible during onboarding

--- a/public/css/onboarding.css
+++ b/public/css/onboarding.css
@@ -664,7 +664,7 @@
 	/*margin-right: 10px;*/
 	margin: 0;
 	display: inline-block;
-	border: none;
+  border: 1px solid #62a1d3;
 	margin-bottom: 18px;
 }
 
